--- a/eth-netstats/Dockerfile
+++ b/eth-netstats/Dockerfile
@@ -1,3 +1,8 @@
+# root/blockchain/eth-netstats/Dockerfile
+
+# Ethereum Network Stats
+# Support Visual interface for tracking ethereum network status.
+
 FROM node:8-alpine
 
 RUN apk add --update git
@@ -10,6 +15,6 @@ RUN npm install
 RUN npm install -g grunt-cli
 RUN grunt
 
-EXPOSE 3000
+EXPOSE 3001
 
 CMD ["npm", "start"]
