--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,29 @@
 version: "2"
 services:
+  # Ethereum Node 1
   bootstrap:
     build: monitored-geth-client
-    restart: on-failure
+    # restart: on-failure
     container_name: bootstrap
     hostname: bootstrap
     links:
       - netstats
     entrypoint: /root/start.sh
-    command: '--datadir=~/.ethereum/devchain --nodekeyhex=091bd6067cb4612df85d9c1ff85cc47f259ced4d4cd99816b14f35650f59c322 --rpcapi "db,personal,eth,net,web3,miner" --rpccorsdomain="*" --networkid=2020 --rpc --rpcaddr="0.0.0.0" --ws --wsorigins="*" --wsaddr="0.0.0.0"  --gasprice=0 --etherbase="0xb1d3073bcc45462a3b0dfe69902cdd12971efec9" --allow-insecure-unlock'
+    command: '--datadir=~/.ethereum/devchain --nodekeyhex=091bd6067cb4612df85d9c1ff85cc47f259ced4d4cd99816b14f35650f59c322 --rpcapi "db,personal,eth,net,web3,miner,admin" --rpccorsdomain="*" --networkid=2020 --rpc --rpcaddr="0.0.0.0" --ws --wsorigins="*" --wsaddr="0.0.0.0"  --gasprice=0 --etherbase="0xb1d3073bcc45462a3b0dfe69902cdd12971efec9" --unlock="0,1,2,3,4,5,6,7,8,9,10,11,12,13,14" --password=/root/files/password/password.txt --allow-insecure-unlock'
     volumes:
       - ./files/password:/root/files/password:ro
       - ./files/genesis.json:/root/files/genesis.json:ro
       - ./files/keystore:/root/.ethereum/devchain/keystore:rw
-      - ./monitored-geth-client/.ethereum/devchain:/root/.ethereum/devchain
+      - ./monitored-geth-client/.ethereum:/root/.ethereum:rw
       - /etc/localtime:/etc/localtime:ro
     ports:
       - "30303:30303"
       - "30303:30303/udp"
       - "8545:8545"
+      - "8546:8546"
+    # mem_limit: 1800m
+    # mem_reservation: 1500m
+  # Ethereum Node 2
   eth:
     build: monitored-geth-client
     restart: on-failure
@@ -32,6 +37,7 @@ services:
       - ./files/keystore:/root/.ethereum/devchain/keystore:rw
       - /etc/localtime:/etc/localtime:ro
     command: '--datadir=~/.ethereum/devchain --rpccorsdomain="*" --networkid=2020 --rpc --ws --wsorigins="*" --bootnodes="enode://288b97262895b1c7ec61cf314c2e2004407d0a5dc77566877aad1f2a36659c8b698f4b56fd06c4a0c0bf007b4cfb3e7122d907da3b005fa90e724441902eb19e@XXX:30303"'
+  # Ethereum Network Stats
   netstats:
     build: eth-netstats
     restart: on-failure
@@ -43,3 +49,16 @@ services:
       - /etc/localtime:/etc/localtime:ro
     ports:
       - "3001:3001"
+  # Ethereum Block Explorer 
+  blockchain_explorer:
+    build: 
+      context: ./explorer
+      args:
+        GETH_HOSTNAME: ${GETH_HOSTNAME}
+        GETH_RPCPORT: ${GETH_RPCPORT}
+    restart: on-failure
+    container_name: blockchain_explorer
+    ports:
+      - "3002:8000"
+    links:
+      - bootstrap
